--- a/src/components/navbar/Consulting_card/Sub_Consulting_card.scss
+++ b/src/components/navbar/Consulting_card/Sub_Consulting_card.scss
@@ -44,7 +44,7 @@
             text-align: left;
             margin-top: 15px;
             flex-direction: row;
-            justify-content:first baseline;
+            justify-content:center;
             flex-wrap: wrap;
             .Data{
                 display: flex;
