--- a/src/components/navbar/Consulting_card/Sub_Consulting_card.scss
+++ b/src/components/navbar/Consulting_card/Sub_Consulting_card.scss
@@ -27,7 +27,7 @@
         h2{
             color: white;
             font-size: 40px;
-            margin:0 0 24px;
+            margin:0 0 20px;
             span{
             color: #FFA41B;
         }
@@ -35,22 +35,21 @@
         p{
             color: #D8DAF9;
             font-size: 16px;
-            margin:0 0 16px;
+            margin:0 0 20px;
         }
         .Data_container{
             display: flex;
             width:auto;
             height: auto;
             text-align: left;
-            margin-top: 15px;
+            margin-top: 20px;
             flex-direction: row;
             justify-content:center;
             flex-wrap: wrap;
             .Data{
                 display: flex;
                 flex-direction: column;
-                // padding: 10px;
-                margin:0px 10px;
+                margin-inline-end: 110px;
                 .numbers{
                     font-size: 30px;
                     color: white;
