--- a/src/components/navbar/Question_box/Question.scss
+++ b/src/components/navbar/Question_box/Question.scss
@@ -3,7 +3,6 @@
     width:570px;
     flex-direction: column;
     height: 715px;
-    background-color: bisque;
     text-wrap: wrap;
     text-align: left;
     padding: 20px;
@@ -14,30 +13,25 @@
         display: flex;
         width:100%;
         margin-top: 40px;
-        button{
-           height:50px;
-            width:100%;
-             background-color: white;
-            border-radius: 25px;
-            padding: 16px 24px;
-            border: none;
-            text-align: left;
-            z-index: 1;
-            font-size: 18px;
-            font-weight: 600;
-        }
-        img{
-            height:15px;
-            width:12px;
-        }
+        padding: 16px 24px;
+        height:55px;
+        background-color: white;
+        box-shadow:  0 0 10px rgba(0, 0, 0, 0.1);;
+        border-radius: 28px;
+        font-size: 18px;
+        font-weight: 500;
+        transition: all 1.5s ease;
     }
 .Answers{
-    display: flex;
-    width:100%;
+display: flex;
+width:100%;
 margin-left: 2px;
 margin-top: 10px;
 background-color: #FFA41B;
 border-radius: 25px;
+padding: 12px;
+transition: all 1.5s ease;
+flex-direction: column;
 ol{
     line-height: 40px;
     margin-left: 20px;
@@ -45,7 +39,16 @@ ol{
 color: #FFF2EB;
     li{
 font-size: 16px;
+list-style-type: none;
     }
 }
 }
+}
+
+.hidden{
+    display:  none !important;
+}
+
+.block{
+    display: block;
 }
