--- a/src/components/navbar/Question_box/Question_box.scss
+++ b/src/components/navbar/Question_box/Question_box.scss
@@ -3,6 +3,6 @@
     width:100%;
     justify-content: center;
     align-items: center;
-    height:auto;
-    background-color: aqua;
+    height:800px;
+    background-color: #F8F9FA;
 }
