--- a/src/components/navbar/Question_box/Question.scss
+++ b/src/components/navbar/Question_box/Question.scss
@@ -6,13 +6,17 @@
     text-wrap: wrap;
     text-align: left;
     padding: 20px;
+    justify-content: center;
+    .question_box{
+width: 100%;
+    
     h1{
         font-size: 42px;
     }
     .button{
         display: flex;
         width:100%;
-        margin-top: 40px;
+        margin-top: 20px;
         padding: 16px 24px;
         height:55px;
         background-color: white;
@@ -22,33 +26,64 @@
         font-weight: 500;
         transition: all 1.5s ease;
     }
-.Answers{
+    }
+    .Answers{
 display: flex;
 width:100%;
 margin-left: 2px;
 margin-top: 10px;
 background-color: #FFA41B;
 border-radius: 25px;
-padding: 12px;
+padding: 20px;
 transition: all 1.5s ease;
 flex-direction: column;
-ol{
-    line-height: 40px;
-    margin-left: 20px;
-    padding: 15px;
-color: #FFF2EB;
-    li{
+li{
 font-size: 16px;
-list-style-type: none;
+list-style-type:decimal;
+line-height: 34px;
+margin-left: 15px;
+word-spacing: 1px;
+color: #FEF1DD;
+letter-spacing: normal;
     }
 }
 }
-}
-
 .hidden{
     display:  none !important;
 }
 
 .block{
     display: block;
+}
+.Images{
+    display: flex;
+    width:570px;
+    flex-direction: column;
+    height: 715px;
+    padding: 20px;
+    overflow: hidden;
+    justify-content: center;
+    .Images1{
+    .first_image{
+        width:100%;
+    }
+    }
+    .Images2{
+        display: flex;
+    width:100%;
+    padding: 0px;
+    margin-top: 10px;
+    overflow: hidden;
+    justify-content: center;
+    .second_image{
+        height: 250px;
+        width:260px;
+        margin-right: 10px;
+        margin-left: 0px;
+    }
+    .third_image{
+        height: 250px;
+        width:260px;
+    }
+    }
 }
