--- a/src/components/navbar/Question_box/Question.scss
+++ b/src/components/navbar/Question_box/Question.scss
@@ -35,8 +35,19 @@ margin-top: 10px;
 background-color: #FFA41B;
 border-radius: 25px;
 padding: 20px;
-transition: all 1.5s ease;
+transition: all 0s ease;
 flex-direction: column;
+animation-name: moveBox;
+  animation-duration: 0.5s;
+  animation-direction: alternate;
+@keyframes moveBox {
+  from {
+    transform: translateY(-10px);
+  }
+  to {
+    transform: translateY(0px);
+  }
+}
 li{
 font-size: 16px;
 list-style-type:decimal;
