--- a/src/components/navbar/Strategy/Sub_strategy.css
+++ b/src/components/navbar/Strategy/Sub_strategy.css
@@ -15,8 +15,19 @@
   display: block;
   top: 45px;
   right: 15px;
-  transition: ease-in-out 0.2s;
+  transition: ease-in 0.2s;
   z-index: 1;
+  animation-name: moveBox;
+  animation-duration: 0.5s;
+  animation-direction: alternate;
+}
+@keyframes moveBox {
+  from {
+    opacity: 3px;
+  }
+  to {
+    opacity: 9px;
+  }
 }
 .Strategy_services:hover img {
   transform: scale(0.9);
@@ -41,7 +52,7 @@
   border-radius: 5px;
   transform: scale(1);
   z-index: -1;
-  transition: ease-in-out 0.2s;
+  transition: ease-in-out 0.5s;
 }
 .Strategy_services .title {
   color: #B9B9B9;
