--- a/src/components/navbar/Strategy/Sub_strategy.scss
+++ b/src/components/navbar/Strategy/Sub_strategy.scss
@@ -13,13 +13,25 @@
         display: block;
         top:45px;
         right:15px;
-        transition: ease-in-out 0.2s;
+        transition: ease-in 0.2s;
         z-index: 1;
+        animation-name: moveBox;
+  animation-duration: 0.5s;
+  animation-direction: alternate;
         }
+@keyframes moveBox {
+  from {
+    opacity: 3px;
+  }
+  to {
+     opacity: 9px;
+  }
+}
         img{
             transform: scale(0.9);
         transition: ease-in-out 0.2s;
         }
+       
     }
     .zoom{
         display: none;
@@ -40,7 +52,7 @@
         border-radius: 5px;
         transform: scale(1.0);
         z-index: -1;
-        transition: ease-in-out 0.2s;
+        transition: ease-in-out 0.5s;
     }
     .title{
         color: #B9B9B9;
