--- a/src/components/navbar/Sights/Sightmiddle.scss
+++ b/src/components/navbar/Sights/Sightmiddle.scss
@@ -5,6 +5,7 @@
     justify-content:center ;
     flex-direction: column;
     align-items: center;
+    overflow: hidden;
     p{
         font-size: 40px;
         font-weight: 700;
