--- a/src/components/navbar/Sights/Sightstaff.css
+++ b/src/components/navbar/Sights/Sightstaff.css
@@ -5,8 +5,9 @@
 }
 .Sightstaff .staffBackground {
   height: 350px;
-  width: 500px;
+  width: 520px;
   display: flex;
+  margin: 15px;
   background-size: cover;
   background-position: center;
 }
@@ -18,6 +19,26 @@
   text-align: left;
   padding: 15px;
   background-color: rgba(128, 128, 128, 0.744);
+  position: relative;
+}
+.Sightstaff .staffBackground .staffinfo .line {
+  -webkit-clip-path: polygon(1.5% 71.3%, 1.7% 69.3%, 1.5% 82.3%, 1.8% 96.3%, 11.3% 96%, 11% 100%, 0% 100%, 0% 76.3%, 0.1% 71.3%);
+          clip-path: polygon(1.5% 71.3%, 1.7% 69.3%, 1.5% 82.3%, 1.8% 96.3%, 11.3% 96%, 11% 100%, 0% 100%, 0% 76.3%, 0.1% 71.3%);
+  height: 100px;
+  width: 200px;
+  background-color: white;
+  position: absolute;
+  transition: all 0.2s ease;
+}
+.Sightstaff .staffBackground .staffinfo .line-1 {
+  transform: rotate(180deg);
+  right: 0;
+  top: 0;
+}
+.Sightstaff .staffBackground .staffinfo .line-2 {
+  transform: rotate(0deg);
+  left: 0;
+  bottom: 0;
 }
 .Sightstaff .staffBackground .staffinfo .content {
   font-size: 17px;
