--- a/src/components/navbar/Sights/Sight.scss
+++ b/src/components/navbar/Sights/Sight.scss
@@ -4,7 +4,7 @@
     background-size: cover;
     width:100%;
     justify-content:center ;
-    height: 80vh;
+    height: auto;
     .sightsBack{
         display: flex;
         background-color: #060a24a6;
