--- a/src/components/navbar/Sights/Sightmiddle.scss
+++ b/src/components/navbar/Sights/Sightmiddle.scss
@@ -1,14 +1,16 @@
 .sightsHeading{
     display: flex;
     width: auto;
-    height:auto;
+    height:700px;
     justify-content:center ;
     flex-direction: column;
-    align-items: center;
+    align-content: center;
     overflow: hidden;
+    text-align: center;
     p{
         font-size: 40px;
         font-weight: 700;
         color: white;
+        margin-bottom: 60px;
     }
 }
