--- a/src/components/navbar/Sights/Sightstaff.css
+++ b/src/components/navbar/Sights/Sightstaff.css
@@ -7,11 +7,17 @@
   height: 350px;
   width: 520px;
   display: flex;
-  margin: 15px;
+  margin: 15px 15px 0px 15px;
   background-size: cover;
   background-position: center;
 }
-.Sightstaff .staffBackground .staffinfo {
+.Sightstaff .staffBackground:hover .line {
+  height: 150px;
+  width: 300px;
+  background-color: rgb(231, 171, 20);
+  transition: all 0.3s ease-in;
+}
+.Sightstaff .staffinfo {
   display: flex;
   height: 300px;
   width: 300px;
@@ -21,26 +27,26 @@
   background-color: rgba(128, 128, 128, 0.744);
   position: relative;
 }
-.Sightstaff .staffBackground .staffinfo .line {
+.Sightstaff .staffinfo .line {
   -webkit-clip-path: polygon(1.5% 71.3%, 1.7% 69.3%, 1.5% 82.3%, 1.8% 96.3%, 11.3% 96%, 11% 100%, 0% 100%, 0% 76.3%, 0.1% 71.3%);
           clip-path: polygon(1.5% 71.3%, 1.7% 69.3%, 1.5% 82.3%, 1.8% 96.3%, 11.3% 96%, 11% 100%, 0% 100%, 0% 76.3%, 0.1% 71.3%);
-  height: 100px;
+  height: 50px;
   width: 200px;
   background-color: white;
   position: absolute;
-  transition: all 0.2s ease;
+  transition: all 0.3s ease-out;
 }
-.Sightstaff .staffBackground .staffinfo .line-1 {
+.Sightstaff .staffinfo .line-1 {
   transform: rotate(180deg);
   right: 0;
   top: 0;
 }
-.Sightstaff .staffBackground .staffinfo .line-2 {
+.Sightstaff .staffinfo .line-2 {
   transform: rotate(0deg);
   left: 0;
   bottom: 0;
 }
-.Sightstaff .staffBackground .staffinfo .content {
+.Sightstaff .staffinfo .content {
   font-size: 17px;
   font-weight: normal;
   line-height: 30px;
