--- a/src/components/navbar/Sights/Sightstaff.scss
+++ b/src/components/navbar/Sights/Sightstaff.scss
@@ -7,39 +7,50 @@
         height: 350px;
         width: 520px;
         display: flex;
-        margin: 15px;
+        margin: 15px 15px 0px 15px;
         background-size: cover;
         background-position: center;
 
-        .staffinfo {
-            display: flex;
-            height: 300px;
-            width: 300px;
-            margin: 15px;
-            text-align: left;
-            padding: 15px;
-            background-color: rgba(128, 128, 128, 0.744);
-            position: relative;
-
+        &:hover {
             .line {
-                clip-path: polygon(1.5% 71.3%, 1.7% 69.3%, 1.5% 82.3%, 1.8% 96.3%, 11.3% 96%, 11% 100%, 0% 100%, 0% 76.3%, 0.1% 71.3%);
-                height: 100px;
-                width:200px;
-                background-color: white;
-                position: absolute;
-                transition: all 0.2s ease;
+                height: 150px;
+                width: 300px;
+                background-color: rgb(231, 171, 20);
+                transition: all 0.3s ease-in;
             }
-            .line-1 {
-                transform: rotate(180deg);
-                right: 0;
-                top: 0;
-            }
+        }
+    }
 
-            .line-2 {
-                transform: rotate(0deg);
-                left: 0;
-                bottom: 0;
-            }
+    .staffinfo {
+        display: flex;
+        height: 300px;
+        width: 300px;
+        margin: 15px;
+        text-align: left;
+        padding: 15px;
+        background-color: rgba(128, 128, 128, 0.744);
+        position: relative;
+
+        .line {
+            clip-path: polygon(1.5% 71.3%, 1.7% 69.3%, 1.5% 82.3%, 1.8% 96.3%, 11.3% 96%, 11% 100%, 0% 100%, 0% 76.3%, 0.1% 71.3%);
+            height: 50px;
+            width: 200px;
+            background-color: white;
+            position: absolute;
+            transition: all 0.3s ease-out;
+        }
+
+        .line-1 {
+            transform: rotate(180deg);
+            right: 0;
+            top: 0;
+        }
+
+        .line-2 {
+            transform: rotate(0deg);
+            left: 0;
+            bottom: 0;
+        }
 
         .content {
             font-size: 17px;
@@ -48,5 +59,5 @@
             word-spacing: 1.5px;
         }
     }
-}
+
 }
